--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Nodejs powered Note Application",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -11,10 +12,14 @@
     "url": "git+https://github.com/shaneiadt/nodejs-note-app.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Shane O'Moore",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/shaneiadt/nodejs-note-app/issues"
   },
-  "homepage": "https://github.com/shaneiadt/nodejs-note-app#readme"
+  "homepage": "https://github.com/shaneiadt/nodejs-note-app#readme",
+  "dependencies": {
+    "lodash": "^4.17.11",
+    "yargs": "^12.0.5"
+  }
 }
